20211206-update script